# f1-race-intelligence

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
docs/: architecture.md  engineering-principles.md  roadmap.md  vision.md
pipelines/ingestion/: load_session.py
tests/: test_ingestion.py
