[project]
name = "f1-race-intelligence"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastf1>=3.8.3",
    "pandas>=2.3.3",
    "pyarrow>=25.0.0",
    "unicode>=2.9",
    "unidecode>=1.4.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]


[dependency-groups]
dev = [
    "mypy>=2.3.0",
    "pytest>=9.1.1",
    "ruff>=0.15.21",
]
